# lifeoraAI

./: .env.example  .gitignore  PLAN-embedding-rag-setup.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  start.sh
api/: app.py  dependencies.py  models.py
api/routes/: ask.py  health.py  ingest.py
core/: __init__.py  exceptions.py  logging_config.py  validation.py
data/raw/: exercise.md  lifestyle.md  nutrition.md
notebooks/: phase1_embeddings.ipynb
rag/: pipeline.py
rag/providers/: __init__.py  base.py  claude_provider.py  factory.py  ollama_provider.py
retrieval/: __init__.py  embedder.py  search.py  vector_store.py
tests/: test_retrieval.py
ui/: index.html
